# velox

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  nightly.yml  release.yml
.opencode/: opencode.jsonc
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/io/torvox/: TerminalUiTest.kt
android/app/src/main/java/io/torvox/: TerminalViewModel.kt
android/app/src/main/java/io/torvox/bridge/: TorvoxBridge.kt
android/app/src/main/java/io/torvox/runtime/: TorvoxRuntime.kt
android/app/src/main/java/io/torvox/ui/: ModifierBar.kt  SettingsScreen.kt  TerminalScreen.kt  TerminalSurface.kt
docs/: ARCHITECTURE.md  AUDIT-2026-05-29.md  AUDIT.md  DEVELOPMENT.md  MIGRATION-PLAN.md  PROGRESS.md  ROADMAP.md  SPECIFICATION.md  WORKFLOW.md
scripts/: build-android-libs.sh  emulator-test.sh  local-test.sh  quality-gate.sh
torvox-bench/: Cargo.toml
torvox-bench/benches/: terminal_bench.rs
torvox-core/: Cargo.toml
torvox-core/src/: cell.rs  grid.rs
torvox-fuzz/: Cargo.toml
torvox-fuzz/fuzz_targets/: fuzz_grid_resize.rs  fuzz_osc_parse.rs  fuzz_vt_parser.rs
torvox-gui-android/: Cargo.toml
torvox-gui-android/src/: bridge.rs  surface.rs
torvox-integration-tests/: Cargo.toml
torvox-integration-tests/src/: lib.rs
torvox-renderer/: Cargo.toml
torvox-renderer/examples/: basic_render.rs
torvox-renderer/src/: gpu.rs
torvox-terminal/: Cargo.toml
torvox-terminal/src/: keyboard.rs  pty.rs  session.rs  terminal.rs
