[package]
name = "torvox-bench"
version.workspace = true
edition.workspace = true
description = "Criterion benchmarks for Torvox terminal operations"
license.workspace = true

[dependencies]
torvox-core = { workspace = true }
torvox-terminal = { workspace = true }
torvox-renderer = { workspace = true }
